<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Anyline Bundle Examples</string>
    <string name="anyline">Anyline</string>
    <string name="anyline_email" translatable="false">hello@anyline.com</string>
    <string name="anyline_website_link" translatable="false"><u>www.anyline.com</u></string>
    <string name="anyline_website_samples_link" translatable="false"><u>www.anyline.com/samples</u></string>
    <string name="anyline_website_samples_link_https" translatable="false"><u>https://anyline.com/example-sheets/</u></string>
    <string name="anyline_website_download_link_https" translatable="false"><u>https://anyline.com/request/sdk/</u></string>
    <string name="anyline_portal_link" translatable="false"><u>https://portal.anyline.com/HW0HPL0MmPKVDvDIKXfHEt6Vuy5fg2Eo5FZ7kxzCyupEO,22</u></string>
    <string name="scan_mrz">Scan MRZ</string>
    <string name="read_nfc">Read NFC</string>
    <string name="gas_meter">Gas Meter</string>
    <string name="water_meter">Water Meter</string>
    <string name="digital_meter">Digital Meter</string>
    <string name="barcode">Barcode</string>
    <string name="vin">Vehicle Identification Number</string>
    <string name="mrz">MRZ / Passport</string>
    <string name="mrz_main">Passport MRZ</string>
    <string name="heat_meter">Heat Meter</string>
    <string name="universal_id_scanning">Universal ID</string>
    <string name="electric_meter">Electric Meter</string>
    <string name="auto_analog_digital_meter">Analog/Digital Meter</string>
    <string name="dial_meter">Dial (Alpha)</string>
    <string name="serial_number">Universal Serial Number</string>
    <string name="shipping_container">Shipping Container</string>
    <string name="vertical_shipping_container">Vertical Shipping Container</string>
    <string name="tin">TIN</string>
    <string name="serial_number_energy">Serial Number</string>
    <string name="heat_meter_4_3">4 pre-decimal places</string>
    <string name="heat_meter_5_3">5 pre-decimal places</string>
    <string name="heat_meter_6_3">6 pre-decimal places</string>
    <string name="camera_permission_required">Permissions</string>
    <string name="camera_permission_required_details">Anyline needs the permission to access the camera in
        order to scan.</string>
    <string name="camera_permission_denied">"Permission denied to use the Camera"</string>
    <string name="mrz_result_details">
        Name: %1$s %2$s\nNo.: %3$s\nCountry Code: %4$s\nDay of Birth: %5$s\nExpiration Date: %6$s
    </string>
    <string name="pref_reporting_key" translatable="false">reporting_enabled</string>
    <string name="pref_reset_key" translatable="false">reset</string>
    <string name="pref_version_key" translatable="false">version</string>
    <string name="pref_reporting">Report Results</string>
    <string name="pref_reporting_summary">
        The reporting of results in the Community Edition, including the photo of a scanned item,
        helps us improve our product and the customer experience.
    </string>
    <string name="pref_reset_title">Reset Data</string>
    <string name="pref_dialog_reset_message">Reset all scan data?</string>
    <string name="pref_reset_msg">This will clear all of the data you have generated whilst using the app.</string>
    <string name="version_info">Version</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="document">Document</string>
    <string name="document_ui">Document UI</string>
    <string name="scan_document">Scan Document</string>
    <string name="document_advanced_outline_detection">Advanced Outline Detection</string>
    <string name="document_fast_outline_detection">Fast Outline Detection</string>
    <string name="document_error_not_sharp">Document is not sharp. Please hold the camera steadily and ensure the document is in focus</string>
    <string name="document_error_skew_too_high">Document is skewed. Place the camera directly above the document</string>
    <string name="document_error_outline_not_found">Could not detect document outline</string>
    <string name="document_error_glare_detected">Please remove the glare</string>
    <string name="document_error_too_dark">The image is too dark. Please ensure there is enough light</string>
    <string name="document_error_unknown">Unknown Failure</string>
    <string name="document_picture_error">Error scanning full document:\n</string>
    <string name="document_preview_success">Scanning full document. Please hold still</string>
    <string name="document_picture_success">Document scanned successfully</string>
    <string name="document_using_fast_mode">Switched to fast detection mode</string>
    <string name="document_using_advanced_mode">Switched to advanced detection mode</string>
    <string name="document_processing_picture">Processing the Picture. Please wait</string>
    <string name="document_processing_picture_header">Processing</string>
    <string name="document_image_saved_to">Image saved to</string>
    <string name="scrabble">Scrabble Anagram</string>
    <string name="bottlecap">Bottlecap</string>
    <string name="red_bull_code">Red Bull Mobile Collect</string>
    <string name="isbn">ISBN</string>
    <string name="record">Record Number</string>
    <string name="voucher_code">Voucher Code</string>
    <string name="iban">IBAN</string>
    <string name="your_scrabble_squares">Your Scrabble tiles:</string>
    <string name="scrabble_suggestions">Suggested words</string>
    <string name="scrabble_disclaimer">Note: we cannot guarantee the suggested words to be valid Scrabble words.\nOnly
        english words are
        considered.\nTherefore special characters like German Umlaute are simply ignored.\nBlank fields are not
        taken into account.\nThe calculated points are related to the English-Scrabble version as well.</string>
    <string name="scrabble_no_match">Sorry, no words have been found!</string>
    <string name="scrabble_points">%1$s Points:</string>
    <string name="isbn_description">Description</string>
    <string name="isbn_product_details">Product Details</string>
    <string name="isbn_no_information_found">Searching on google for ISBN: %s</string>
    <string name="no_internet">Could not load web page. Maybe you have no internet connection?</string>
    <string name="record_search">Record Search</string>
    <string name="category_energy">Meter Reading</string>
    <string name="category_identification">Identification</string>
    <string name="category_fintech">Fintech</string>
    <string name="category_barcodes">Barcode</string>
    <string name="category_documents">Documents</string>
    <string name="category_loyality">Loyality</string>
    <string name="category_others">Other</string>
    <string name="category_mro">MRO</string>
    <string name="category_identity_documents">Identity Documents</string>
    <string name="samples">Samples</string>
    <string name="history">History</string>
    <string name="help">Help</string>
    <string name="free_sdk">Free SDK</string>
    <string name="title_electric_meter">Electric Meter (analog)</string>
    <string name="title_auto_analog_digital_meter">Analog/Digital</string>
    <string name="title_gas_meter">Gas Meter (analog)</string>
    <string name="title_water_meter">Water Meter (analog)</string>
    <string name="title_barcode">Barcode</string>
    <string name="title_barcode_PDF417">PDF417</string>
    <string name="title_belgian_driving_license">"BE Driving License"</string>
    <string name="title_dutch_driving_license">"NL Driving License"</string>
    <string name="title_nfc_scanning">NFC Scanner</string>
    <string name="title_serial_scanning">Serial Scanning</string>
    <string name="title_mrz">MRZ</string>
    <string name="title_digital_meter">Digital Meter</string>
    <string name="title_heat_meter">Heat Meter</string>
    <string name="title_dial_meter">Dial (Alpha)</string>
    <string name="title_serial_number_energy">Energy Serial Number</string>
    <string name="title_serial_number">Serial Number</string>
    <string name="title_document">Document</string>
    <string name="title_iban">IBAN</string>
    <string name="title_voucher">Voucher Code</string>
    <string name="title_redbull">Red Bull Mobile Collect</string>
    <string name="title_bottlecap">Bottlecap</string>
    <string name="title_scrabble">Scrabble Anagram</string>
    <string name="title_isbn">ISBN</string>
    <string name="title_record">Record Number</string>
    <string name="title_passport_visa">Passport / Visa</string>
    <string name="title_record_result">Record Result</string>
    <string name="title_isbn_result">ISBN Result</string>
    <string name="title_scrabble_result">Scrabble Result</string>
    <string name="title_select_config">Select your configuration</string>
    <string name="title_shipping_container">Shipping Container</string>
    <string name="title_cowtag">Cattle Tag</string>
    <string name="header_config">Configuration: %1$s</string>
    <string name="heat_meter_4_3_short">4 pre-decimal places</string>
    <string name="heat_meter_5_3_short">5 pre-decimal places</string>
    <string name="heat_meter_6_3_short">6 pre-decimal places</string>
    <string name="place_your_item_like_this">Place your item like this</string>
    <string name="feedback_helps_during_scanning">This feedback helps you\nduring scanning</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="white">white</string>
    <string name="black">black</string>
    <string name="feedback_helps_you">This feedback helps you</string>
    <string name="send">Send</string>
    <string name="get_your_samples">Get your samples!</string>
    <string name="why_you_should_get_the_samples">You want to try out all scan modes but you don’t have a digital meter at home or any scrabble letters in your pocket? No problem!</string>
    <string name="download_to_your_phone">You can download a bundle of sample images directly to your phone or get it via email!</string>
    <string name="email_note_why">Note that it may be difficult to scan and display the samples simultaneously from the same device ;)</string>
    <string name="enter_your_mail">enter your email</string>
    <string name="preview_available">Preview available on Google Books</string>
    <string name="more_infos_on_google_books">See more details on Google Books</string>
    <string name="delete_history">Delete History</string>
    <string name="history_empty">The history is empty.</string>
    <string name="reporting">Reporting</string>
    <string name="what_is_anyline">What is Anyline?</string>
    <string name="anyline_short_description">Anyline is the leading text recognition SDK for your mobile device.\nYou can embed Anyline in your own mobile application and digitize and scan all kinds of texts, codes and numbers.\n\nThis app shows a few things that already work and gives ideas about what you can adjust!</string>
    <string name="email">Email</string>
    <string name="send_demo_material">Send me demo material</string>
    <string name="feedback_shaky">hold still</string>
    <string name="feedback_too_bright">too bright</string>
    <string name="feedback_too_dark">too dark</string>
    <string name="feedback_perfect">perfect</string>
    <string name="congratulation">Congratulations</string>
    <string name="delete_all">Delete all</string>
    <string name="cancel">Cancel</string>
    <string name="switch_on">ON</string>
    <string name="switch_off">OFF</string>
    <string name="enable_barcode_detection">Barcode Detection</string>
    <string name="save">Save</string>
    <string name="finish">Finish</string>
    <string name="scan_again">Scan Again</string>
    <string name="screen_scan_result_confirm_msg">Please confirm your data before sending.</string>
</resources>