<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons_container"
        android:layout_below="@id/toolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/confirm_msg_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:gravity="top|start"
                    android:background="@color/black_10"
                    android:text="@string/screen_scan_result_confirm_msg"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:padding="20dp"/>

                <TextView
                    android:id="@+id/message"
                    android:background="@color/black_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:textColor="@color/black_75" />

            </RelativeLayout>

            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_below="@id/response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/confirm_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_10"
                android:layout_below="@id/fragment_container"
                android:orientation="vertical"
                android:padding="20dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:gravity="top|start"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/confirmation_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/confirmation_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/black_10"
                        android:singleLine="false"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/confirm_cancel_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="15dp"
                        android:text="@string/cancel"
                        android:textAllCaps="true"
                        android:textColor="@color/black_100"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/confirm_accept_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/send"
                        android:textAllCaps="true"
                        android:textColor="@color/black_10"
                        android:textSize="14sp"/>

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/blue"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/button_scan_again"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:minHeight="60dp"
                android:text="@string/scan_again"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/button_done"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:minHeight="60dp"
                android:background="@color/blue_light"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/finish"
                android:textAllCaps="true"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/button_send"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:minHeight="60dp"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:visibility="gone"/>

        </LinearLayout>
    </RelativeLayout>

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />
</RelativeLayout>
